--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,21 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light w-100">
         <a class="navbar-brand" href="/{{role}}" style="margin-left:10px">Home</a>
+        {{#if (eq role 'admin')}}
+        <div class="navbar-nav">
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+        {{else}}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,10 +54,12 @@
                         <span id="cart-count">0</span>
                     </a>
                 </li>
+    
             </ul>
         </div>
+        {{/if}}
     </nav>
-
+    
     {{#if (eq role 'admin')}}
     <div class="container-fluid">
         <div class="row">
@@ -67,7 +84,7 @@
                     </li>
                 </ul>
             </div>
-
+    
             <!-- Nội dung bên phải -->
             <div class="col-md-9">
                 <div class="p-4">
@@ -77,7 +94,7 @@
         </div>
     </div>
     {{else}}
-    <main class="container my-4">
+    <main>
         {{{body}}}
     </main>
     {{/if}}
