--- a/views/adminViews/categories.handlebars
+++ b/views/adminViews/categories.handlebars
@@ -143,13 +143,10 @@
             </div>
             {{/each}}
         </div>
-<<<<<<< HEAD
-=======
-        {{else}}
+        {{!-- {{else}}
         <p class="text-muted">Không có Category nào.</p>
-        {{/if}}
+        {{/if}} --}}
         {{!-- <a href="/admin" class="btn btn-secondary mt-4">Quay lại</a> --}}
->>>>>>> efcb067d0013b798f44580b8017806df2fd7b88d
 
         <a href="/admin/categories" class="btn btn-secondary mt-4">Quay lại</a>
     </section>
