--- a/views/customerViews/cart.handlebars
+++ b/views/customerViews/cart.handlebars
@@ -38,7 +38,7 @@
 {{/if}}
 
   <div class="text-center mt-4">
-    <a href="/categories" class="btn btn-primary">Tiếp tục mua sắm</a>
+    <a href="/user" class="btn btn-primary">Tiếp tục mua sắm</a>
   </div>
 </div>
 
