--- a/views/customerViews/cart.handlebars
+++ b/views/customerViews/cart.handlebars
@@ -6,7 +6,9 @@
       <table class="table table-striped">
         <thead>
           <tr>
+            <th>Hình ảnh sản phẩm</th>
             <th>Sản phẩm</th>
+            <th>Dung lượng sản phẩm</th>
             <th>Số lượng</th>
             <th>Giá</th>
             <th>Tổng cộng</th>
@@ -16,7 +18,9 @@
         <tbody>
           {{#each items}}
           <tr data-id="{{id}}">
+            <td><img src="{{this.image}}" alt="{{this.product_name}}" width="100"></td>
             <td>{{product_name}}</td>
+            <td>{{this.storage_capacity}}</td>
             <td>{{quantity}}</td>
             <td>{{formatCurrency price}}</td>
             <td class="item-total">{{formatCurrency sum_price}}</td>
