--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,9 +43,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/register">Register</a>
                 </li>
-                <li class="nav-item">
+                {{!-- <li class="nav-item">
                     <a class="nav-link" href="/login">Login</a>
-                </li>
+                </li> --}}
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
